--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -1,12 +1,12 @@
 <ion-header>
-	<ion-navbar>
-		<button ion-button menuToggle>
+    <ion-navbar>
+        <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-		<ion-title>Signup</ion-title>
-	</ion-navbar>
+        <ion-title>注册帮助</ion-title>
+    </ion-navbar>
 </ion-header>
-
+<!--
 <ion-content class="login-page">
 
 	<div class="logo">
@@ -38,5 +38,17 @@
 			<button ion-button (click)="onSignup(signupForm)" type="submit" block>Create</button>
 		</div>
 	</form>
+
+</ion-content>-->
+
+
+
+
+<ion-content padding class="speaker-detail">
+
+    <div text-center>
+        <h1> 无需注册，首次登陆即为注册过程</h1>
+    </div>
+
 
 </ion-content>
